<resources>
    <string name="app_name">QuizDroid</string>
    <string name="hello_world">Hello world!</string>

    <string name="pick">Pick a topic:</string>
    <string name="preferences">Preferences</string>

    <string name="title_activity_overview">Overview</string>
    <string name="begin">Begin</string>

    <string name="submit">Submit</string>

    <string name="title_activity_quiz">QuizActivity</string>

    <string name="title_activity_preference">Preferences</string>
    <string name="title_download_manager">Download Manager</string>
    <string name="title_url_pref">Repository URL</string>
    <string name="summary_url_pref">URL used to download quiz data.</string>
    <string name="title_interval_pref">Sync Interval</string>
    <string name="summary_interval_pref">Interval between each check to URL (in minutes).</string>


</resources>
