<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/title_download_manager">

        <EditTextPreference
            android:key="url_pref"
            android:title="@string/title_url_pref"
            android:summary="@string/summary_url_pref"
            android:dialogTitle="@string/title_url_pref"
            android:hint="your.url.com/getjson"/>

        <EditTextPreference
            android:key="interval_pref"
            android:title="@string/title_interval_pref"
            android:summary="@string/summary_interval_pref"
            android:dialogTitle="@string/title_interval_pref"
            android:inputType="numberSigned"
            android:dependency="url_pref"
            android:hint="number in minutes"/>

        <SwitchPreference
            android:key="download_switch"
            android:title="Download Service"
            android:summaryOn="Download service turned on"
            android:summaryOff="Download service turned off"
            android:switchTextOn="On"
            android:switchTextOff="Off"
            android:dependency="interval_pref" />

    </PreferenceCategory>
</PreferenceScreen>